--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "intervention/image": "^3.0",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.10.1",
-        "laravel/ui": "^4.6"
+        "laravel/ui": "^4.6",
+        "surfsidemedia/shoppingcart": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
